--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "httpolyglot": "^0.1.2",
     "mediasoup": "^3.12.13",
     "mediasoup-client": "^3.6.101",
+    "pdf-lib": "^1.17.1",
     "recordrtc": "^5.6.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
