--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "google-auth-library": "^9.1.0",
     "httpolyglot": "^0.1.2",
+    "jsonwebtoken": "^9.0.2",
     "mediasoup": "^3.12.13",
     "mediasoup-client": "^3.6.101",
+    "mongoose": "^8.0.1",
     "pdf-lib": "^1.17.1",
     "recordrtc": "^5.6.2",
     "socket.io": "^4.7.2",
