--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mediasoup": "^3.12.13",
     "mediasoup-client": "^3.6.101",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "recordrtc": "^5.6.2",
     "socket.io": "^4.7.2",
