--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pdf-lib": "^1.17.1",
     "recordrtc": "^5.6.2",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "uuid": "^9.0.1"
   }
 }
