--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "recordrtc": "^5.6.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.10.1",
     "uuid": "^9.0.1"
   }
 }
